# feedscoring

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
examples/sekoia/: pir.yaml  sekoia-results-2025-03-31.json
feedscoring/: consumer.py  download.py  main.py  pretty.py  settings.py  stix_validator.py  utils.py
tests/: conftest.py  test_consumer.py  test_sectors.py  test_stix_validator.py  test_utils.py  test_webhook.py
